src/objects/ensxapp__SAP_Delivery_Search_Preset__mdt.object
<CustomObject>
    <description>Predefined search criteria for enosiX Delivery Search</description>
    <fields>
        <fullName>ensxapp__Open__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this delivery currently in an &quot;Open&quot; status</description>
        <label>Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Packed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this delivery currently been packed</description>
        <label>Packed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Picked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this delivery currently been picked</description>
        <label>Picked</label>
        <type>Checkbox</type>
    </fields>
    <label>SAP Delivery Search Preset</label>
    <pluralLabel>SAP Delivery Search Preset</pluralLabel>
</CustomObject>